<resources>
    <string name="app_name">Creditmantri</string>

    <!--Home Screen-->
    <string name="select_city">Select City</string>

    <string name="chennai">Chennai</string>
    <string name="mumbai">Mumbai</string>
    <string name="bangalore">Bangalore</string>
    <string name="new_delhi">New Delhi</string>

    <string-array name="city_list">
        <item>@string/chennai</item>
        <item>@string/mumbai</item>
        <item>@string/bangalore</item>
        <item>@string/new_delhi</item>
    </string-array>

    <string name="date">Date</string>
    <string name="weather">Weather</string>
    <string name="colon">:</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="percentage">%</string>
    <string name="wind">Wind</string>
    <string name="wind_val">%1$s m/s</string>
    <string name="pressure">Pressure</string>
    <string name="pressure_val">%1$s mmHg</string>
    <string name="fahrenheit_sym">\u2109</string>
    <string name="celsius_sym">\u2103</string>
    <string name="share_weather_details">Share weather details</string>
    <string name="weather_details">Weather details</string>
    <string name="send_to">Send to</string>

    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="no_internet"> Please Verify Your Internet Connection.</string>
    <string name="connect_time_out">Connection to Credit Mantri App Server Timeout, Please try again.</string>
    <string name="exit_msg">Are you sure you want to Exit?</string>

    <!--Setting screen-->
    <string name="settings">Settings</string>
    <string name="unit_of_measurement">Unit of measurement of temperature</string>
    <string name="fahrenheit">Fahrenheit - \u2109</string>
    <string name="celsius">Celsius - \u2103</string>

</resources>
